add functionality to button

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>Overwatch Scenario Creation Tool</title>
 
-    <script src="../bundle.js"></script>
 </head>
 
+<body>
+    <div id="app">
 
+        <button id="testButton">Test</button>
+
+    </div>
+</body>
+
+<script src="../bundle.js"></script>
 
 </html>
